# radar-tracking-simulator

./: .gitignore  CMakeLists.txt  LICENSE  README.md  aircraft_fast.csv  aircraft_slow.csv  main.cpp  plot_results.py
core/: Entity.cpp  Entity.h  Extendedkalmanfilter.cpp  Extendedkalmanfilter.h  FrictionSimulator.cpp  FrictionSimulator.h  Kalmanfilter1d.cpp  Kalmanfilter1d.h  Logger.h  Radar.cpp  Radar.h  Telemetrylogger.h  Tracker.cpp  Tracker.h  Wheelmodel.h
core/legacy_program/: Entity.cpp  Entity.h  Kalmanfilter1d.h  Logger.h
